Bug #16431 Events: An event which alters itself disappears
Submitted: 12 Jan 2006 5:29 Modified: 14 Feb 2006 22:57
Reporter: Peter Gulutzan
Status: Closed
Category:Server: SP Severity:S3 (Non-critical)
Version:5.1.6-alpha-debug OS:Linux (linux)
Assigned to: Andrey Hristov Target Version:

[12 Jan 2006 5:29] Peter Gulutzan
Description:
I make an event X whose body says "alter event X".
It disappears after a few modifications.

How to repeat:
mysql> create event e_43 on schedule every 1 second do set @a = 5;
Query OK, 1 row affected (0.00 sec)

mysql> set global event_scheduler = 1;
Query OK, 0 rows affected (0.00 sec)

mysql> alter event e_43 do alter event e_43;
ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that
corresponds to your MySQL server version for the right syntax to use near '' at line 1
mysql> alter event e_43 do alter event e_43 do set @a = 4;
Query OK, 1 row affected (0.00 sec)

mysql> alter event e_43 do alter event e_43 do set @a = 4;
ERROR 1513 (HY000): Unknown event 'e_43'
mysql> select * from mysql.event;
Empty set (0.00 sec)
[20 Jan 2006 22:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/1420
[1 Feb 2006 22:40] Andrey Hristov
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2028
[9 Feb 2006 14:23] Andrey Hristov
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2356
[14 Feb 2006 22:57] Andrey Hristov
Last things for fix went with the fix for bug #16423