fix for bug#16431 (Events: An event which alters itself disappears) WL#1034 (Internal CRON)